# Proyecto-Final-ALSE-2025-2

./: CMakeLists.txt  DoxyFile
include/: DatabaseManager.h  addrecorddialog.h  csvexporter.h  loginwindow.h  mainwindow.h
src/: DatabaseManager.cpp  User.cpp  addrecorddialog.cpp  csvexporter.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp
